[gd_scene load_steps=2 format=3 uid="uid://dw5k8n3rx9pty"]

[ext_resource type="Script" path="res://scripts/ui/skill_cooldown_display.gd" id="1_skill_cd"]

[node name="SkillCooldownDisplay" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -100.0
offset_right = 310.0
offset_bottom = -10.0
grow_vertical = 0
script = ExtResource("1_skill_cd")

[node name="SkillIcon" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -16.0
offset_right = 37.0
offset_bottom = 16.0
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="SkillLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = -25.0
offset_right = 200.0
offset_bottom = -5.0
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = ""
vertical_alignment = 1

[node name="CooldownBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = 0.0
offset_right = 295.0
offset_bottom = 18.0
grow_vertical = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="RemainingTimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = 0.0
offset_right = 295.0
offset_bottom = 18.0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "1.2s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = 20.0
offset_right = 295.0
offset_bottom = 35.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 12
text = "準備完了！"
horizontal_alignment = 1
vertical_alignment = 1
